--- a/styl.css
+++ b/styl.css
@@ -18,3 +18,11 @@
 .card {
     display: flex;
 }
+
+.container {
+    font-family: 'Courier New', monospace;
+}
+
+.container3 {
+    height: 350px;
+}
